--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
-<!DOCTYPEhtml>
+<!DOCTYPE html>
 <html lang="pt-br">
     <head>
         <meta charset=UTF-8>
         <title> Documento </title>
           </head>
           <body>
+              <p> Programação Front-end- 16/02</p>
+
+              A tag html é utilizada para informar ao navegador que tipo de estrutura está sendo construída, podendo ter títulos, parágrafos, links, entre outros.
+              Existem diversas tags do HTML, mas as principais são: title, meta, head, body frooyer e div.
+              Dentro dessa tag, é necessário declarar outras duas tags: head e body.
 
           <body>
-</html>
+</html
