--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
           <body>
               <p> Programação Front-end- 16/02</p>
 
+              <h1>Hierarquia de títulos</h1>
+
+
               A tag html é utilizada para informar ao navegador que tipo de estrutura está sendo construída, podendo ter títulos, parágrafos, links, entre outros.
               Existem diversas tags do HTML, mas as principais são: title, meta, head, body frooyer e div.
               Dentro dessa tag, é necessário declarar outras duas tags: head e body.
